[gd_scene load_steps=7 format=3 uid="uid://dvck17j6oqwyh"]

[ext_resource type="Texture2D" uid="uid://27c5jtc8uveu" path="res://assets/ui/campaign_ui_sheet.png" id="1_nmudk"]
[ext_resource type="Script" uid="uid://d110byvcgqo6j" path="res://scripts/ui/ingame_ui/campaign_game_ui.gd" id="1_xkb3f"]
[ext_resource type="FontFile" uid="uid://do0laogygl6cd" path="res://assets/fonts/ThaleahFat.ttf" id="2_xkb3f"]
[ext_resource type="PackedScene" uid="uid://dbfc2i61afeeq" path="res://scenes/ingame_ui/health_panel.tscn" id="4_rbuxl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rbuxl"]
atlas = ExtResource("1_nmudk")
region = Rect2(0, 0, 72, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k22gw"]
atlas = ExtResource("1_nmudk")
region = Rect2(72, 0, 600, 31)

[node name="CampaignGameUI" type="CanvasLayer"]
script = ExtResource("1_xkb3f")
metadata/_edit_use_anchors_ = true

[node name="MatchTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 120.0
one_shot = true

[node name="TopBarContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_right = -480.0
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(1.715, 1.715)
theme_override_constants/separation = 0

[node name="Time" type="TextureRect" parent="TopBarContainer"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_rbuxl")

[node name="TimeLabel" type="Label" parent="TopBarContainer/Time"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
offset_left = 18.0
offset_top = 8.0
offset_right = 54.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xkb3f")
theme_override_font_sizes/font_size = 16
text = "02:20"

[node name="Score" type="TextureRect" parent="TopBarContainer"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_k22gw")

[node name="ScoreLabel" type="Label" parent="TopBarContainer/Score"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 45.2012
offset_top = 8.16327
offset_right = 93.2012
offset_bottom = 23.1633
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xkb3f")
theme_override_font_sizes/font_size = 16
text = "000000"

[node name="HealthPanelContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_top = 64.0
offset_bottom = 160.0
scale = Vector2(2.5, 2.5)
theme_override_constants/separation = 32

[node name="HealthPanel_P1" parent="HealthPanelContainer" instance=ExtResource("4_rbuxl")]
visible = false
layout_mode = 2

[node name="HealthPanel_P2" parent="HealthPanelContainer" instance=ExtResource("4_rbuxl")]
visible = false
layout_mode = 2

[node name="HealthPanel_P3" parent="HealthPanelContainer" instance=ExtResource("4_rbuxl")]
visible = false
layout_mode = 2

[node name="HealthPanel_P4" parent="HealthPanelContainer" instance=ExtResource("4_rbuxl")]
visible = false
layout_mode = 2
